--- a/projects/my-springboot-basic-restful/pom.xml
+++ b/projects/my-springboot-basic-restful/pom.xml
@@ -37,7 +37,7 @@
 		    <version>2.7.0</version>
 		</dependency>
 	    
-	    
+	    <!-- Testing libraries -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
