--- a/projects/my-springboot-basic-security/src/main/resources/application.properties
+++ b/projects/my-springboot-basic-security/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.ldap.embedded.ldif=src/main/resources/test-server.ldif
 
 # SECURITY (SecurityProperties)
-security.basic.authorize-mode=role
-security.user.name=user
-security.user.password=password
-security.user.role=USER
+#security.basic.authorize-mode=role
+#security.user.name=user
+#security.user.password=password
+#security.user.role=USER
